clunky fix to make it work
Widely known that with SvelteKit it's SMUI is broken.

You get  "can't find stylesheet to import" with some sub module in material.

You have to manually install `@material/*` in top level node_modules (since I'm using pnpm it doesn't matter that much.)

I repeatedly ran
`pnpm run prepare`
and then
`pnpm i -d @material/[name]`
for whatever came up as missing for the prepare.

I only added enough to get Button, Card and Drawer.

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -8,10 +8,8 @@
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
-  $error: color-palette.$red-900,
+  $error: color-palette.$red-900
 );
-
-@use './app';
 
 html,
 body {
